OldVersion/1.2.2/README.md
# 浏览器 360 ERP 全景媒体查看器

这是一个零依赖的静态网页全景查看器，支持 2:1 等距柱状投影（ERP）的全景图片和 360 视频。

## 使用

直接双击 `index.html`，或在这个目录启动本地静态服务器：

```sh
python3 -m http.server 8765 --directory panorama-viewer
```

然后打开 `http://localhost:8765`。

## 开发与部署

开发阶段保留三文件，方便调试：

- `index.html`
- `styles.css`
- `app.js`

部署阶段上传单文件：

- `fpp.html`

每次修改开发版后，运行下面命令重新生成压缩后的部署文件：

```sh
node panorama-viewer/build-fp.js
```

`fpp.html` 会内联 CSS 和 JS，并做保守压缩：压缩 HTML/CSS 空白，移除 JS 注释和缩进，但不改变量名，降低尺寸同时尽量避免破坏 WebGL shader、正则和模板字符串。

版本备份约定：新增功能时提升版本号，并把修改前版本备份到 `OldVersion/<version>/`；修 bug 不提升版本号，也不新增备份。本次 `OldVersion/1.2.1/` 保留的是 `1.2.1`，当前开发线为 `1.2.2`。

也可以通过地址参数直接载入媒体：

```text
http://localhost:8765/?image=https%3A%2F%2Fexample.com%2Fpanorama.jpg
http://localhost:8765/?video=https%3A%2F%2Fexample.com%2Fpanorama.mp4
http://localhost:8765/fpp.html?URL=https%3A%2F%2Fexample.com%2Fmain4_OU.jpg
```

`URL` 参数同时支持小写 `url`。如果链接后缀能识别为视频，会按视频载入；其他情况默认按图片载入。

## 功能

- 打开本地文件：点击“打开本地文件”，自动识别图片或视频。
- 拖拽播放：把本地图片或视频直接拖到右侧播放区，会自动识别类型；视频载入后会尝试直接播放。
- 打开 URL 媒体：输入 URL 后点击“打开 URL”。带常见后缀时会自动识别图片或视频，无法识别时默认按图片尝试。
- 投影格式：支持 ERP360 2D、ERP360 上下 3D、VR180 2D、VR180 左右 3D、Non VR 普通矩形、EAC 2D/上下 3D。
- 自动投影判断：新载入媒体时会按文件名/URL 关键字和宽高比自动选择投影格式；手动改过投影后，后续再次选择本地文件或 URL 时都不会再自动覆盖投影格式。
- 交互查看：鼠标/单指拖拽环视，滚轮或双指缩放改变视角宽度，方向键微调，`0` 重置视角。
- 视频控制：播放/暂停、画面底部进度条、静音、循环、0.5× 到 2× 倍速，空格键播放/暂停。
- 播放区叠加控制：视频载入后，画面左下角会出现半透明播放/暂停按钮；重置视角、全屏、进入 XR 位于画面右上角。
- 其他：自动旋转、全屏、水平翻转、手机陀螺仪视角、WebXR 沉浸式观看、XR 清晰度倍率调节。

## 手机观看

手机浏览器里可以单指拖拽环视，双指捏合缩放视角宽度。点击“陀螺仪”按钮后，浏览器会请求设备方向传感器权限；授权后转动手机即可环视，单指拖拽可以微调方向。

iPhone/iPad 通常要求 HTTPS 页面并且必须由用户点击按钮触发授权。本地 `file://` 或普通 `http://` 页面可能无法获得传感器权限，部署到公网时建议使用 HTTPS。

窄屏手机布局会优先显示主播放画面，参数面板放在画面下方，避免控制层遮挡观看区域。

## WebXR

“进入 XR”按钮会在浏览器和设备支持 `immersive-vr` 时启用。通常需要支持 WebXR 的浏览器、HTTPS 或 localhost 环境，以及可用的 VR/XR 设备。普通桌面浏览器不支持时，按钮会保持禁用。

如果在 Quest 等头显里觉得画面偏糊，可以把“XR 清晰度”从“原生推荐”改成“增强 1.5×”或“超清 2.0×”。倍率越高，沉浸式 framebuffer 越大，清晰度越好，但解码和渲染压力也会增加；如果掉帧或发热明显，请降回“原生推荐”或“标准 1.0×”。

注意：360/180 内容会把整张图片或视频铺到大范围视野里，源素材分辨率非常关键。2K 360 在头显里通常会显得低清；实际 VR 观看建议至少 4K，优先使用 5.7K/8K 素材。

## URL 媒体注意事项

浏览器要求 WebGL 使用的跨域图片和视频必须允许 CORS。也就是说，媒体服务器需要返回类似 `Access-Control-Allow-Origin: *` 的响应头。否则链接即使能在普通标签页里打开，也可能无法贴到全景球体上。

视频编码也要浏览器本身支持。一般推荐 MP4/H.264 或 WebM/VP9，画面比例推荐 2:1。

## 投影格式说明

ERP360 和 VR180 会按球面方向采样。3D 格式在普通桌面预览里默认显示左眼画面；进入 WebXR 后会按左右眼分别采样：上下 3D 左眼取上半幅、右眼取下半幅，左右 3D 左眼取左半幅、右眼取右半幅。Non VR 会把普通矩形放在前方虚拟屏幕上，并按媒体原始比例显示；左右/上下 3D 会按单眼有效画面比例显示。EAC 按常见 YouTube/Google 3×2 equi-angular cubemap 布局做基础映射，不同来源如果 face order 不同，可能需要进一步适配。

自动判断规则：

- 文件名或 URL 包含 `VR180` 且比例约 `1:1`：`VR180 2D`。
- 文件名或 URL 包含 `VR180` 且比例不是 `1:1`：`VR180 3D 左右`。
- 文件名或 URL 包含 `VR360` 或 `_360` 且比例约 `1:1`：`ERP360 3D 上下`。
- 文件名或 URL 包含 `VR360` 或 `_360` 且比例不是 `1:1`：`ERP360 2D`。
- 文件名或 URL 包含 `_SBS`、`_3D`、`_LR`：`Non VR 3D 左右`。
- 文件名或 URL 包含 `_OU`：`ERP360 3D 上下`。
- 文件名或 URL 包含 `_TD`：`Non VR 3D 上下`。
- 文件名或 URL 包含 `_EAC`：`EAC 2D`。
- 文件名或 URL 没有 VR 关键字，但画面比例约 `2:1`：`ERP360 2D`。
- 其他缺省：`Non VR 普通矩形`。
